US1660: Presenter for preserve-formatting CSS class logic

--- a/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Postcode\PostcodeServiceTests.cs" />
     <Compile Include="Presentation\FullNameFormatterTests.cs" />
     <Compile Include="Presentation\RegionalTeamPresenter.cs" />
+    <Compile Include="Presentation\VacancyTextPresenterTests.cs" />
     <Compile Include="Presentation\VacancyTypePresenterTests.cs" />
     <Compile Include="Presentation\WagePresenterTests.cs" />
     <Compile Include="Processes\ApplicationStatusChangedSubscriberTests.cs" />
