--- a/src/SFA.Apprenticeships.Infrastructure.Presentation/SFA.Apprenticeships.Infrastructure.Presentation.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Presentation/SFA.Apprenticeships.Infrastructure.Presentation.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionalTeamPresenter.cs" />
     <Compile Include="VacancyPresenter.cs" />
+    <Compile Include="VacancyTextPresenter.cs" />
     <Compile Include="VacancyTypePresenter.cs" />
     <Compile Include="WagePresenter.cs" />
   </ItemGroup>
