--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Pre.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Pre.config
@@ -81,38 +81,9 @@
           </layout>
         </target>
       </target>
-      <target name="AzureEventHub" xsi:type="AzureEventHubTarget" EventHubPath="log" EventHubConnectionStringSettingName="ConfigurationEventHubLogConnectionString">
-        <layout xsi:type="JsonLayout">
-          <property name="user" layout="${mdlc:userId}" />
-          <property name="session" layout="${mdlc:sessionId}" />
-          <property name="application" layout="SFA.Apprenticeships.Web.Candidate" />
-          <property name="environment" layout="${environment}" />
-          <property name="version" layout="${gdc:item=version}" />
-          <property name="date" layout="${date:universalTime=true:format=yyyy-MM-ddTHH\:mm\:ss.fffZ}" />
-          <property name="level" layout="${level:upperCase=true}" />
-          <property name="logger" layout="${logger}" />
-          <property name="machinename" layout="${machinename}" />
-          <property name="processname" layout="${processname}" />
-          <property name="message" layout="${message}" />
-          <property name="exception" layout="${onexception:${exception:format=tostring}}" />
-          <property name="errordata" layout="${onexception:${exception:format=data}}" />
-          <property name="errorcode" layout="${event-context:item=ErrorCode}" />
-          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
-          <property name="ticks" layout="${ticks}" />
-          <property name="processid" layout="${processid}" />
-          <property name="useragent" layout="${mdlc:UserAgent}" />
-          <property name="referrer" layout="${mdlc:UrlReferrer}" />
-          <property name="userlanguages" layout="${mdlc:UserLanguages}" />
-          <property name="currentculture" layout="${mdlc:CurrentCulture}" />
-          <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
-          <property name="headers" layout="${mdlc:Headers}" />
-          <property name="requestGuid" layout="${mdlc:requestGuid}" />
-          <property name="headersLogged" layout="${mdlc:headersLogged}" />
-        </layout>
-      </target>
     </targets>
     <rules xdt:Transform="Replace">
-      <logger name="*" minlevel="Info" writeTo="fallbacklogger,AzureEventHub" />
+      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
     </rules>
   </nlog>
 </configuration>
