Check isMigrated in the Authorize mediator action. Unit tested.

--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Mediators\Locations\LocationsTests.cs" />
     <Compile Include="Mediators\Locations\TestsBase.cs" />
     <Compile Include="Mediators\ProviderUser\AuthorizeTests.cs" />
+    <Compile Include="Mediators\ProviderUser\ProviderViewModelBuilder.cs" />
     <Compile Include="Mediators\ProviderUser\TestBase.cs" />
     <Compile Include="Mediators\ProviderUser\VerifyEmailAddressTests.cs" />
     <Compile Include="Mediators\ProviderUser\UpdateUserTests.cs" />
