--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests.csproj
@@ -102,6 +102,9 @@
       <HintPath>..\packages\mongocsharpdriver.1.10.0\lib\net35\MongoDB.Driver.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1507.0118\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -128,9 +131,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-        <Compile Include="..\SharedAssemblyInfo.cs">
+    <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>   
+    </Compile>
     <Compile Include="Applications\ApprenticeshipApplicationReadRepositoryTests.cs" />
     <Compile Include="Applications\ApprenticeshipApplicationWriteRepositoryTests.cs" />
     <Compile Include="Applications\TraineeshipApplicationReadRepositoryTests.cs" />
