--- a/tools/SetApplicationStatus/SetApplicationStatus.Console/SetApplicationStatus.Console.csproj
+++ b/tools/SetApplicationStatus/SetApplicationStatus.Console/SetApplicationStatus.Console.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Dapper, Version=1.50.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.0\lib\net451\Dapper.dll</HintPath>
       <Private>True</Private>
@@ -71,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Entities\Mongo\ApplicationStatus.cs" />
     <Compile Include="Entities\Sql\ApplicationStatus.cs" />
     <Compile Include="Entities\Mongo\Application.cs" />
