--- a/tools/SetApplicationStatus/SetApplicationStatus.Console/packages.config
+++ b/tools/SetApplicationStatus/SetApplicationStatus.Console/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="Dapper" version="1.50.0" targetFramework="net452" />
   <package id="mongocsharpdriver" version="2.2.4" targetFramework="net452" />
   <package id="MongoDB.Bson" version="2.2.4" targetFramework="net452" />
