--- a/tools/SetApplicationStatus/SetApplicationStatus.UnitTests/SetApplicationStatus.UnitTests.csproj
+++ b/tools/SetApplicationStatus/SetApplicationStatus.UnitTests/SetApplicationStatus.UnitTests.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLineOptionsTests.cs" />
+    <Compile Include="InProgressApplicationPatchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
