US1735/US1801 Changes following code review

--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -163,7 +163,6 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
-    <Compile Include="Attributes\CookiesEnabledAttribute.cs" />
     <Compile Include="Configuration\ManageWebConfiguration.cs" />
     <Compile Include="Configuration\RecruitWebConfiguration.cs" />
     <Compile Include="Constants\Pages\PrivacyPageMessages.cs" />
@@ -214,8 +213,8 @@
     <Compile Include="Providers\ProviderProvider.cs" />
     <Compile Include="Providers\ProviderUserProvider.cs" />
     <Compile Include="Factories\SelectListItemsFactory.cs" />
-    <Compile Include="Providers\RAACookieDetectionProvider.cs" />
-    <Compile Include="Providers\RaaEuCookieDirectiveProvider.cs" />
+    <Compile Include="Providers\CookieDetectionProvider.cs" />
+    <Compile Include="Providers\EuCookieDirectiveProvider.cs" />
     <Compile Include="Providers\VacancyProvider.cs" />
     <Compile Include="Validators\Application\TraineeshipApplicationViewModelValidator.cs" />
     <Compile Include="Validators\Application\ApprenticeshipApplicationViewModelValidator.cs" />
