--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -163,6 +163,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
+    <Compile Include="Attributes\CookiesEnabledAttribute.cs" />
     <Compile Include="Configuration\ManageWebConfiguration.cs" />
     <Compile Include="Configuration\RecruitWebConfiguration.cs" />
     <Compile Include="Constants\Pages\PrivacyPageMessages.cs" />
