When non migrated provider user verifies email, they are taken to a new confirmation page. Content is TBC

--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -603,6 +603,7 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>Cookies.generated.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\ProviderUser\OnBoardingComplete.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
