--- a/src/SFA.Apprenticeships.Domain.Entities.Raa.UnitTests/SFA.Apprenticeships.Domain.Entities.Raa.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa.UnitTests/SFA.Apprenticeships.Domain.Entities.Raa.UnitTests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="GeoPoint\GeoPointExtensionMethodTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reference\RegionalTeamMapperTests.cs" />
   </ItemGroup>
