--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -84,6 +84,7 @@
     <Compile Include="ICreatableEntity.cs" />
     <Compile Include="IUpdatableEntity.cs" />
     <Compile Include="Locations\GeoPoint.cs" />
+    <Compile Include="Locations\GeoPointExtensionMethods.cs" />
     <Compile Include="Locations\PostalAddress.cs" />
     <Compile Include="Locations\VacancyLocation.cs" />
     <Compile Include="Parties\Employer.cs" />
