--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Entities\ApplicationWithHistory.cs" />
     <Compile Include="Entities\ApplicationWithSubVacancy.cs" />
     <Compile Include="Entities\CandidatePerson.cs" />
+    <Compile Include="Entities\CandidateWithHistory.cs" />
     <Compile Include="Entities\Mongo\Address.cs" />
     <Compile Include="Entities\Mongo\CandidateSummary.cs" />
     <Compile Include="Entities\Mongo\CandidateUser.cs" />
@@ -131,10 +132,12 @@
     <Compile Include="Entities\Sql\ApplicationIds.cs" />
     <Compile Include="Entities\Sql\ApplicationSummary.cs" />
     <Compile Include="Entities\Sql\Candidate.cs" />
+    <Compile Include="Entities\Sql\CandidateHistory.cs" />
     <Compile Include="Entities\Sql\CandidateSummary.cs" />
     <Compile Include="Entities\Sql\SubVacancy.cs" />
     <Compile Include="IMigrationProcessor.cs" />
     <Compile Include="IVacancyApplicationsUpdater.cs" />
+    <Compile Include="Mappers\CandidateHistoryMappers.cs" />
     <Compile Include="Mappers\ApplicationHistoryMappers.cs" />
     <Compile Include="Mappers\CandidateMappers.cs" />
     <Compile Include="Mappers\IApplicationMappers.cs" />
