--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -142,8 +142,10 @@
     <Compile Include="Mappers\CandidateMappers.cs" />
     <Compile Include="Mappers\IApplicationMappers.cs" />
     <Compile Include="Mappers\ICandidateMappers.cs" />
+    <Compile Include="Repository\Sql\CandidateHistoryRepository.cs" />
     <Compile Include="Repository\Sql\ApplicationRepository.cs" />
     <Compile Include="Repository\Sql\ApplicationHistoryRepository.cs" />
+    <Compile Include="Repository\Sql\CandidateHistoryTable.cs" />
     <Compile Include="Repository\Sql\CandidateRepository.cs" />
     <Compile Include="Repository\Sql\LocalAuthorityRepository.cs" />
     <Compile Include="Repository\Sql\PersonRepository.cs" />
