Get the employer for FAA without any status check.

--- a/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
+++ b/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
@@ -95,10 +95,12 @@
     </Compile>
     <Compile Include="EmployerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\GetByIdWithoutStatusCheckStrategy.cs" />
     <Compile Include="Strategies\GetByEdsUrnStrategy.cs" />
     <Compile Include="Strategies\GetByIdsStrategy.cs" />
     <Compile Include="Strategies\GetByIdStrategy.cs" />
     <Compile Include="Strategies\GetPagedEmployerSearchResultsStrategy.cs" />
+    <Compile Include="Strategies\IGetByIdWithoutStatusCheckStrategy.cs" />
     <Compile Include="Strategies\IGetByEdsUrnStrategy.cs" />
     <Compile Include="Strategies\IGetByIdsStrategy.cs" />
     <Compile Include="Strategies\IGetByIdStrategy.cs" />
