--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -163,7 +163,7 @@
     </Reference>
     <Reference Include="NanoSpell, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NanoSpell\NanoSpell.dll</HintPath>
+      <HintPath>Content\_assets\js\vendor\nanospell\bin\NanoSpell.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -568,7 +568,9 @@
     <Content Include="Content\_assets\js\vendor\knockout.validation.debug.js" />
     <Content Include="Content\_assets\js\vendor\knockout.validation.js" />
     <Content Include="Content\_assets\js\vendor\nanospell\autoload.js" />
-    <Content Include="Content\_assets\js\vendor\nanospell\bin\NanoSpell.dll" />
+    <Content Include="Content\_assets\js\vendor\nanospell\bin\NanoSpell.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\_assets\js\vendor\nanospell\getstarted.html" />
     <Content Include="Content\_assets\js\vendor\nanospell\nanospell.ckeditor\icons\nanospell.png" />
     <Content Include="Content\_assets\js\vendor\nanospell\nanospell.ckeditor\license.txt" />
