--- a/src/SFA.Apprenticeships.Infrastructure.Security/SFA.Apprenticeships.Infrastructure.Security.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Security/SFA.Apprenticeships.Infrastructure.Security.csproj
@@ -85,6 +85,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -98,6 +102,7 @@
     <Compile Include="AES256Provider.cs" />
     <Compile Include="Configuration\CryptographyConfiguration.cs" />
     <Compile Include="CryptographyService.cs" />
+    <Compile Include="IEncryptionProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +114,9 @@
       <Project>{1F500137-C8E9-49AA-886E-1922D9D870EB}</Project>
       <Name>SFA.Infrastructure</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
