US2029: renames and the expired link view

--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -606,7 +606,8 @@
       <LastGenOutput>Cookies.generated.cs</LastGenOutput>
     </Content>
     <Content Include="Views\ProviderUser\OnBoardingComplete.cshtml" />
-    <Content Include="Views\EmployerApplication\View.cshtml" />
+    <Content Include="Views\EmployerApplication\ViewAnonymised.cshtml" />
+    <Content Include="Views\EmployerApplication\LinkExpired.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
